--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,13 +29,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  bloc: ^8.0.2
+  flutter_bloc: ^8.0.1
+  equatable: ^2.0.3
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  flutter_bloc: ^8.0.0
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
